--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                     <li><a href="celulares.html">Celulares</a></li>
                                     <li><a href="mochila.html">Mochila</a>
                                     <li><a href="Pantalones.html">Pantalones</a>
-                                    <li><a href="ui-general.html">General</a></li>
+                                    <li><a href="Polos.html">Polos</a></li>
                                     <li><a href="ui-grid.html">Grid</a></li>
                                     <li><a href="ui-media-objects.html">Media Objects</a></li>
                                     <li><a href="ui-modals.html">Modals</a></li>
