--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
                                 <a href="javascript: void(0);" class="has-arrow waves-effect"><i
                                         class="mdi mdi-diamond-stone"></i><span>Categoria</span></a>
                                 <ul class="sub-menu" aria-expanded="false">
+                                    <li><a href="carrusel.html">Carrusel</a></li>
                                     <li><a href="zapatilla.html">Zapatillas</a></li>
                                     <li><a href="celulares.html">Celulares</a></li>
                                     <li><a href="mochila.html">Mochila</a>
@@ -276,12 +277,7 @@
                                     <li><a href="ui-modals.html">Modals</a></li>
                                     <li><a href="ui-progressbars.html">Progress Bars</a></li>
                                     <li><a href="ui-tabs.html">Tabs</a></li>
-                                    <li><a href="ui-typography.html">Typography</a></li>
-                                    <li><a href="ui-toasts.html">Toasts</a></li>
-                                    <li><a href="ui-tooltips-popovers.html">Tooltips & Popovers</a></li>
-                                    <li><a href="ui-scrollspy.html">Scrollspy</a></li>
-                                    <li><a href="ui-spinners.html">Spinners</a></li>
-                                    <li><a href="ui-sweetalerts.html">Sweet Alerts</a></li>
+                                    
                                 </ul>
                             </li>
                             
