--- a/mochila.html
+++ b/mochila.html
@@ -265,16 +265,16 @@ vertical/
                             <a href="javascript: void(0);" class="has-arrow waves-effect"><i
                                     class="mdi mdi-diamond-stone"></i><span>UI Elements</span></a>
                             <ul class="sub-menu" aria-expanded="false">
-                                <li><a href="index.html">Zapatillas</a></li>
-                                <li><a href="index.html">celulares</a></li>
-                                <li><a href="index.html">Mochila</a>
-                                <li><a href="ui-embeds.html">Embeds</a>
-                                <li><a href="ui-general.html">General</a></li>
-                                <li><a href="ui-grid.html">Grid</a></li>
-                                <li><a href="ui-media-objects.html">Media Objects</a></li>
-                                <li><a href="ui-modals.html">Modals</a></li>
-                                <li><a href="ui-progressbars.html">Progress Bars</a></li>
-                                <li><a href="ui-tabs.html">Tabs</a></li>
+                                <li><a href="zapatilla.html">Zapatillas</a></li>
+                                    <li><a href="celulares.html">Celulares</a></li>
+                                    <li><a href="mochila.html">Mochila</a>
+                                    <li><a href="Pantalones.html">Pantalones</a>
+                                    <li><a href="Polos.html">Polos</a></li>
+                                    <li><a href="ui-grid.html">Grid</a></li>
+                                    <li><a href="ui-media-objects.html">Media Objects</a></li>
+                                    <li><a href="ui-modals.html">Modals</a></li>
+                                    <li><a href="ui-progressbars.html">Progress Bars</a></li>
+                                    <li><a href="ui-tabs.html">Tabs</a></li>
                                 
                             </ul>
                         </li>
