--- a/index.html
+++ b/index.html
@@ -468,21 +468,22 @@
                                     <div id="carouselExampleCaption" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner" role="listbox">
                                             <div class="carousel-item active">
-                                                <img src="Admin/vertical/assets/images/media/sm-3.jpg" alt="..." class="d-block img-fluid">
+                                                <img src="img/8a21c1aac798e142b331954aa02428e9.jpg" alt="..." class="d-block img-fluid">
                                                 <div class="carousel-caption d-none d-md-block">
                                                     <h3 class="text-white">First slide label</h3>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="Admin/vertical/assets/images/media/sm-4.jpg" alt="..." class="d-block img-fluid">
+                                                <img src="img/8a21c1aac798e142b331954aa02428e9.jpg" alt="..." class="d-block img-fluid">
                                                 <div class="carousel-caption d-none d-md-block">
                                                     <h3 class="text-white">Second slide label</h3>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="Admin/vertical/assets/images/media/sm-5.jpg" alt="..." class="d-block img-fluid">
+                                                <img src="img/8a21c1aac798e142b331954aa02428e9.jpg
+                                                " alt="..." class="d-block img-fluid">
                                                 <div class="carousel-caption d-none d-md-block">
                                                     <h3 class="text-white">Third slide label</h3>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
