--- a/celulares.html
+++ b/celulares.html
@@ -404,11 +404,6 @@ vertical/
                     <!-- end page title -->
 
 
-                   
-
-                   
-
-
 
                     <!-- end row -->
 
@@ -426,59 +421,107 @@ vertical/
                                 </div>
                             </div>
 
-                        </div><!-- end col -->
-
+                        </div>
                         <div class="col-md-6 col-xl-3">
 
+                            <!-- Simple card -->
                             <div class="card">
                                 <img class="card-img-top img-fluid" src="img/image.png" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make
                                         up the bulk of the card's content.</p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                </ul>
-                                <div class="card-body">
-                                    <a href="#" class="card-link">Card link</a>
-                                    <a href="#" class="card-link">Another link</a>
+                                    <a href="#" class="btn btn-primary waves-effect waves-light">Button</a>
                                 </div>
                             </div>
 
-                        </div><!-- end col -->
-
+                        </div>
                         <div class="col-md-6 col-xl-3">
 
+                            <!-- Simple card -->
                             <div class="card">
                                 <img class="card-img-top img-fluid" src="img/image.png" alt="Card image cap">
                                 <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make
                                         up the bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary waves-effect waves-light">Button</a>
                                 </div>
                             </div>
 
-                        </div><!-- end col -->
-
-
+                        </div>
                         <div class="col-md-6 col-xl-3">
 
+                            <!-- Simple card -->
                             <div class="card">
+                                <img class="card-img-top img-fluid" src="img/image.png" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
-                                    <h6 class="card-subtitle text-muted">Support card subtitle</h6>
-                                </div>
-                                <img class="img-fluid" src="img/image.png" alt="Card image cap">
-                                <div class="card-body">
                                     <p class="card-text">Some quick example text to build on the card title and make
                                         up the bulk of the card's content.</p>
-                                    <a href="#" class="card-link">Card link</a>
-                                    <a href="#" class="card-link">Another link</a>
+                                    <a href="#" class="btn btn-primary waves-effect waves-light">Button</a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-md-6 col-xl-3">
+
+                            <!-- Simple card -->
+                            <div class="card">
+                                <img class="card-img-top img-fluid" src="img/image.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make
+                                        up the bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary waves-effect waves-light">Button</a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-md-6 col-xl-3">
+
+                            <!-- Simple card -->
+                            <div class="card">
+                                <img class="card-img-top img-fluid" src="img/image.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make
+                                        up the bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary waves-effect waves-light">Button</a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-md-6 col-xl-3">
+
+                            <!-- Simple card -->
+                            <div class="card">
+                                <img class="card-img-top img-fluid" src="img/image.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make
+                                        up the bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary waves-effect waves-light">Button</a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-md-6 col-xl-3">
+
+                            <!-- Simple card -->
+                            <div class="card">
+                                <img class="card-img-top img-fluid" src="img/image.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make
+                                        up the bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary waves-effect waves-light">Button</a>
                                 </div>
                             </div>
 
                         </div><!-- end col -->
+
+                        <!-- end col -->
                     </div>
                     <!-- end row -->
 
